Fri Jan 30 12:38:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/Log_Msg.cpp:
          Fixed unicode logging problems on non windows platforms

Fri Jan 30 11:54:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Intrusive_List.cpp:
          Just have one exit point in the methods

        * ace/Singleton.cpp:
        * ace/Singleton.h:
          Added a static close() which can be used to explicitly close
          an ACE_Singleton. It will then deregister from the object manager
          from cleanup. This way an application developer could close his
          singletons explicitly, but keep the safety that ACE will do that
          also when the application does a shutdown

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Singleton_Test.cpp:
          Added a new test for the close

Thu Jan 29 18:48:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3541_Regression_Test.cpp:
          Fix compile error with WinCE < 6

        * ace/config-win32-common.h:
          Fixed incorrect comment

Thu Jan 29 12:59:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/mpc-mode.el:
          Added patch from Stefan Naewe <stefan.naewe@googlemail.com>

Thu Jan 29 10:33:52 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ATM_Acceptor.cpp:
        * ace/ATM_QoS.cpp:
        * ace/ATM_Stream.cpp:
        * ace/ATM_Stream.inl:
        * ace/OS_NS_Thread.inl:
        * ace/OS_NS_unistd.inl:
        * ace/OS_NS_wchar.cpp:
          Don't use () when returning 0 or -1

Wed Jan 28 20:22:45 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * bin/ciao_tests.lst:
        * bin/tao_orb_tests.lst:
        * bin/tao_other_tests.lst:

          Removed these files.  They have moved to the TAO and CIAO bin
          directories.  This resolves bug 2748.

        * bin/auto_run_tests.pl:
        * bin/fuzz.pl:
