@@ -46,6 +46,7 @@ Bug_3102_Regression_Test
 Bug_3319_Regression_Test
 Bug_3432_Regression_Test
 Bug_3500_Regression_Test
+Bug_3532_Regression_Test
 Bug_3541_Regression_Test
 Bug_3505_Regression_Test
 CDR_Array_Test: !ACE_FOR_TAO
